WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201044
[GTK][WPE] Fixes for non-unified builds after
r248547
https://bugs.webkit.org/show_bug.cgi?id=201044
Summary
[GTK][WPE] Fixes for non-unified builds after r248547
Adrian Perez
Reported
2019-08-22 10:19:53 PDT
Since
r248547
a few issues have crept in which have broken non-unified builds.
Attachments
Patch
(5.41 KB, patch)
2019-08-22 10:46 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2019-08-22 10:46:47 PDT
Created
attachment 377026
[details]
Patch
WebKit Commit Bot
Comment 2
2019-08-22 11:54:41 PDT
Comment on
attachment 377026
[details]
Patch Clearing flags on attachment: 377026 Committed
r249022
: <
https://trac.webkit.org/changeset/249022
>
WebKit Commit Bot
Comment 3
2019-08-22 11:54:42 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-08-22 11:55:25 PDT
<
rdar://problem/54608265
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug