Source/JavaScriptCore/b3/B3ReduceLoopStrength.cpp
@@ -28,9 +28,12 @@
 
 #if ENABLE(B3_JIT)
 
+#include "B3BasicBlockInlines.h"
 #include "B3BlockInsertionSet.h"
 #include "B3ConstPtrValue.h"
 #include "B3EnsureLoopPreHeaders.h"
+#include "B3InsertionSet.h"
+#include "B3NaturalLoops.h"
 #include "B3PhaseScope.h"
 #include "B3ProcedureInlines.h"
 #include "B3ValueInlines.h"
